# pascal-compiler

./: .gitignore  CMakeLists.txt  README.MD
source/: analizador_lexico.cpp  analizador_lexico.h  analizador_semantico.cpp  analizador_semantico.h  analizador_sintactico.cpp  analizador_sintactico.h  code_generator.cpp  code_generator.h  compiler.h  constraints.h  main.cpp  parseTreeVisualization.py  parse_tree.cpp  parse_tree.h  token.cpp  token.h
theoretical work/: gramatic.md
